--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.9.20",
+    "@types/leaflet.markercluster": "^1.5.5",
     "axios": "^1.10.0",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "react-leaflet-markercluster": "^5.0.0-rc.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
