--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@types/leaflet": "^1.9.20",
     "@types/leaflet.markercluster": "^1.5.5",
     "axios": "^1.10.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "react": "^19.1.0",
