--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:welcome": "node src/hooks/useChat.test.js"
   },
   "dependencies": {
     "@types/leaflet": "^1.9.20",
