--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
+    "leaflet.browser.print": "^2.0.2",
     "leaflet.markercluster": "^1.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
